added homepage and basic cards as example

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="d-flex justify-content-between">
+  <p-card class="w-100 m-2"></p-card>
+  <p-card class="w-100 m-2"></p-card>
+  <p-card class="w-100 m-2"></p-card>
+</div>
