#9 #36 Created basic navigation and pages

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
@@ -1,1 +1,7 @@
-<p>navigation works!</p>
+<div class="d-flex">
+  <button pButton class="m-1" label="Home" icon="pi pi-home" routerLink="/"></button>
+  <button pButton class="m-1" label="Incomes" icon="pi pi-money-bill" routerLink="/incomes"></button>
+  <button pButton class="m-1" label="Expenses" icon="pi pi-chart-pie" routerLink="/expenses"></button>
+  <button pButton class="m-1" label="Goals" icon="pi pi-chart-line" routerLink="/goals"></button>
+  <button pButton class="m-1" label="Profile" icon="pi pi-user" routerLink="/Profile"></button>
+</div>
