#10 #40 Implement basic income page

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -1,1 +1,10 @@
-<p>income works!</p>
+<div class="d-flex justify-content-between">
+  <div class="flex-column w-100 m-2">
+    <p-card class="m-2">Incomes</p-card>
+  </div>
+  <div class="flex-column w-100 m-2">
+    <p-card class="m-2">Total Income</p-card>
+    <p-card class="m-2">Net Monthly</p-card>
+    <p-card class="m-2">Total Expenses</p-card>
+  </div>
+</div>
