--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -3,3 +3,9 @@
   <p-card class="w-100 m-2"></p-card>
   <p-card class="w-100 m-2"></p-card>
 </div>
+
+<div class="d-flex justify-content-between">
+  <p-card class="w-100 m-2">
+    <app-example-form></app-example-form>
+  </p-card>
+</div>
