--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -1,6 +1,12 @@
 <div class="d-flex justify-content-between">
-  <div class="flex-column w-100 m-2">
-    <p-card class="m-2">Incomes</p-card>
+  <p-card class="w-100 m-2">
+    <app-income-entry-form></app-income-entry-form>
+  </p-card>
+</div>
+
+<div class="d-flex justify-content-between">
+  <div class="w-100 flex-column m-2">
+    <p-card styleClass="h-100 m-2">Incomes</p-card>
   </div>
   <div class="flex-column w-100 m-2">
     <p-card class="m-2">Total Income</p-card>
