#10 #43 Basic income detail sections with placeholder text

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -6,8 +6,14 @@
     </p-card>
   </div>
   <div class="flex-column w-100 m-2">
-    <p-card class="m-2">Total Income</p-card>
-    <p-card class="m-2">Net Monthly</p-card>
-    <p-card class="m-2">Total Expenses</p-card>
+    <p-card class="m-2 justify-content-center">
+      <app-income-detail-section></app-income-detail-section>
+    </p-card>
+    <p-card class="m-2 justify-content-center">
+      <app-income-monthly-detail-section></app-income-monthly-detail-section>
+    </p-card>
+    <p-card class="m-2 justify-content-center">
+      Total Expenses
+    </p-card>
   </div>
 </div>
