#11 #51 Basic expense detail section with placeholder text

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
@@ -1,10 +1,16 @@
 <div class="d-flex justify-content-between">
-  <div class="flex-column w-100 m-2">
-    <p-card class="m-2">Expenses</p-card>
+  <div class="w-100 flex-column m-2">
+    <p-card styleClass="h-100 m-2">Expenses</p-card>
   </div>
   <div class="flex-column w-100 m-2">
-    <p-card class="m-2">Total Income</p-card>
-    <p-card class="m-2">Net Monthly</p-card>
-    <p-card class="m-2">Total Expenses</p-card>
+    <p-card class="m-2 justify-content-center">
+      <app-income-detail-section></app-income-detail-section>
+    </p-card>
+    <p-card class="m-2 justify-content-center">
+      <app-income-monthly-detail-section></app-income-monthly-detail-section>
+    </p-card>
+    <p-card class="m-2 justify-content-center">
+      <app-expense-detail-section></app-expense-detail-section>
+    </p-card>
   </div>
 </div>
