--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -13,7 +13,7 @@
       <app-income-monthly-detail-section></app-income-monthly-detail-section>
     </p-card>
     <p-card class="m-2 justify-content-center">
-      Total Expenses
+      <app-expense-detail-section></app-expense-detail-section>
     </p-card>
   </div>
 </div>
