--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -1,25 +1,34 @@
-<div class="d-flex justify-content-between">
+<div class="d-flex justify-content-between m-2">
   <div class="w-100 d-flex flex-column">
     <p-card class="m-2">Total Income</p-card>
     <p-card class="m-2">Total Expenses</p-card>
   </div>
-  <div class="w-100 d-flex flex-column">
+  <div class="w-100">
     <p-card styleClass="h-100 m-2">Net Monthly</p-card>
   </div>
-  <div class="w-100 d-flex flex-column">
+  <div class="w-100">
     <p-card styleClass="h-100 m-2">Current Net Worth</p-card>
   </div>
 </div>
+<div></div>
 <div class="panel">
-  <p-card>Net Worth Chart</p-card>
+  <p-card styleClass="h-100 m-2">Net Worth Chart</p-card>
 </div>
-<div class="d-flex justify-content-between">
-  <p-card class="m-2 w-100">Short Term Savings Chart</p-card>
-  <p-card class="m-2 w-100">Debt Payoff Chart</p-card>
+<div class="d-flex justify-content-between m-2">
+  <div class="w-100">
+    <p-card styleClass="h-100 m-2">Short Term Savings Chart</p-card>
+  </div>
+  <div class="w-100">
+    <p-card styleClass="h-100 m-2">Debt Payoff Chart</p-card>
+  </div>
 </div>
-<div class="d-flex justify-content-between">
-  <p-card class="m-2 w-100">Mortgage Payoff Chart</p-card>
-  <p-card class="m-2 w-100">Investments Chart</p-card>
+<div class="d-flex justify-content-between m-2">
+  <div class="w-100">
+    <p-card styleClass="m-2 h-100">Mortgage Payoff Chart</p-card>
+  </div>
+  <div class="w-100">
+    <p-card styleClass="m-2 h-100">Investments Chart</p-card>
+  </div>
 </div>
 
 <div class="d-flex justify-content-between">
