--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
@@ -2,13 +2,7 @@
   <div class="w-100 flex-column m-2">
     <p-card styleClass="h-100 m-2">Expenses</p-card>
   </div>
-  <div class="flex-column w-100 m-2">
-    <p-card class="m-2 justify-content-center">
-      <app-income-detail-section></app-income-detail-section>
-    </p-card>
-    <p-card class="m-2 justify-content-center">
-      <app-income-monthly-detail-section></app-income-monthly-detail-section>
-    </p-card>
+  <div>
     <p-card class="m-2 justify-content-center">
       <app-expense-detail-section></app-expense-detail-section>
     </p-card>
