#10 #102 integrate income listing API into front-end

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-listing/income-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-listing/income-listing.component.html
@@ -1,15 +1,15 @@
 <div>
-  <p-table [value]="frequencies" [tableStyle]="{'min-width': '50rem'}">
+  <p-table [value]="model" [tableStyle]="{'min-width': '50rem'}">
     <ng-template pTemplate="header">
       <tr>
-        <th>Key</th>
-        <th>Value</th>
+        <th>Amount</th>
+        <th>Frequency</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-product>
+    <ng-template pTemplate="body" let-income>
       <tr>
-        <td>{{frequencies.keys}}</td>
-        <td>{{frequencies.values}}</td>
+        <td>{{income.amount}}</td>
+        <td>{{displayFrequencies(income.frequency)}}</td>
       </tr>
     </ng-template>
   </p-table>
