--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -1,15 +1,15 @@
 <div class="d-flex justify-content-between">
-  <div class="w-100 flex-column m-2">
-    <p-card styleClass="h-100 m-2">
+  <div class="d-flex w-100 flex-column mx-1">
+    <p-card>
       <app-income-entry-form></app-income-entry-form>
       <app-income-listing></app-income-listing>
     </p-card>
   </div>
-  <div class="flex-column w-100 m-2">
-    <p-card class="m-2 justify-content-center">
+  <div class="d-flex flex-column w-100 mx-1">
+    <p-card class="mb-1">
       <app-income-detail-section></app-income-detail-section>
     </p-card>
-    <p-card class="m-2 justify-content-center">
+    <p-card class="mt-1">
       <app-income-monthly-detail-section></app-income-monthly-detail-section>
     </p-card>
   </div>
