--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -1,8 +1,12 @@
 <div class="d-flex justify-content-between">
   <div class="d-flex w-100 flex-column mx-1">
     <p-card>
-      <app-income-entry-form></app-income-entry-form>
-      <app-income-listing></app-income-listing>
+      <div class="mb-1">
+        <app-income-entry-form></app-income-entry-form>
+      </div>
+      <div class="mt-1">
+        <app-income-listing></app-income-listing>
+      </div>
     </p-card>
   </div>
   <div class="d-flex flex-column w-100 mx-1">
