fix table width on income listing

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-listing/income-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-listing/income-listing.component.html
@@ -1,5 +1,5 @@
 <div>
-  <p-table [value]="model" [tableStyle]="{'min-width': '50rem'}">
+  <p-table [value]="model">
     <ng-template pTemplate="header">
       <tr>
         <th>Amount</th>
