#10 update income card header

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between">
   <div class="d-flex w-100 flex-column mx-1">
-    <p-card>
+    <p-card header="Incomes">
       <div class="mb-1">
         <app-income-entry-form (added)="incomeAdded()"></app-income-entry-form>
       </div>
