--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -1,38 +1,21 @@
 <div class="d-flex justify-content-between m-2">
-  <div class="w-100 d-flex flex-column">
-    <p-card class="m-2">Total Income</p-card>
-    <p-card class="m-2">Total Expenses</p-card>
+  <div class="w-100 d-flex flex-column m-2">
+    <p-card styleClass="h-100" class="mb-2" header="Total Income"></p-card>
+    <p-card styleClass="h-100" class="mt-2" header="Total Expenses"></p-card>
   </div>
-  <div class="w-100">
-    <p-card styleClass="h-100 m-2">Net Monthly</p-card>
-  </div>
-  <div class="w-100">
-    <p-card styleClass="h-100 m-2">Current Net Worth</p-card>
+  <div class="w-100 d-flex m-2">
+      <p-card styleClass="mr-2 h-100" header="Net Monthly"></p-card>
+      <p-card styleClass="ml-2 h-100" header="Current Net Worth"></p-card>
   </div>
 </div>
-<div></div>
-<div class="panel">
-  <p-card styleClass="h-100 m-2">Net Worth Chart</p-card>
+<div class="d-flex m-2">
+  <p-card class="w-100" styleClass="m-2" header="Net Worth Chart"></p-card>
 </div>
 <div class="d-flex justify-content-between m-2">
-  <div class="w-100">
-    <p-card styleClass="h-100 m-2">Short Term Savings Chart</p-card>
-  </div>
-  <div class="w-100">
-    <p-card styleClass="h-100 m-2">Debt Payoff Chart</p-card>
-  </div>
+    <p-card styleClass="m-2" class="w-100" header="Short Term Savings Chart"></p-card>
+    <p-card styleClass="m-2" class="w-100" header="Debt Payoff Chart"></p-card>
 </div>
 <div class="d-flex justify-content-between m-2">
-  <div class="w-100">
-    <p-card styleClass="m-2 h-100">Mortgage Payoff Chart</p-card>
-  </div>
-  <div class="w-100">
-    <p-card styleClass="m-2 h-100">Investments Chart</p-card>
-  </div>
-</div>
-
-<div class="d-flex justify-content-between">
-  <p-card class="w-100 m-2">
-    <app-example-form></app-example-form>
-  </p-card>
+    <p-card styleClass="m-2" class="w-100" header="Mortgage Payoff Chart"></p-card>
+    <p-card styleClass="m-2" class="w-100" header="Investments Chart"></p-card>
 </div>
