--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between">
-  <div class="d-flex w-100 flex-column mx-1">
+  <div class="d-flex w-100 flex-column m-2">
     <p-card header="Incomes">
       <div class="mb-1">
         <app-income-entry-form (added)="incomeAdded()"></app-income-entry-form>
@@ -9,7 +9,7 @@
       </div>
     </p-card>
   </div>
-  <div class="d-flex flex-column w-100 mx-1">
+  <div class="d-flex flex-column w-100 m-2">
     <p-card class="mb-1">
       <app-income-detail-section></app-income-detail-section>
     </p-card>
