#11 #49 add expenses listing component and integrate with API

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
@@ -1,9 +1,16 @@
 <div class="d-flex justify-content-between">
-  <div class="w-100 flex-column m-2">
-    <p-card styleClass="h-100 m-2">Expenses</p-card>
+  <div class="d-flex w-100 flex-column m-2">
+    <p-card header="Expenses">
+      <div class="mb-1">
+        <app-expense-entry-form (added)="expenseAdded()"></app-expense-entry-form>
+      </div>
+      <div class="mt-1">
+        <app-expense-listing [expenses]="expenses"></app-expense-listing>
+      </div>
+    </p-card>
   </div>
-  <div>
-    <p-card class="m-2 justify-content-center">
+  <div class="d-flex flex-column w-100 m-2">
+    <p-card>
       <app-expense-detail-section></app-expense-detail-section>
     </p-card>
   </div>
