--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
@@ -1,1 +1,41 @@
-<p>expense-entry-form works!</p>
+<form (ngSubmit)="onSubmit(form)" #form="ngForm">
+  <div class="d-flex justify-content-between">
+    <span class="p-float-label w-100 mr-1">
+      <p-inputNumber id="amount"
+                     [required]="true"
+                     [(ngModel)]="model.amount" name="amount"
+                     #amount="ngModel" class="w-100" styleClass="w-100">
+      </p-inputNumber>
+      <label for="amount">Amount</label>
+    </span>
+    <span class="p-float-label w-100 mx-1">
+      <p-dropdown id="frequency"
+                  [required]="true"
+                  [options]="frequencies"
+                  [(ngModel)]="model.frequency"
+                  optionLabel="value"
+                  optionValue="key"
+                  class="w-100" styleClass="w-100"
+                  name="frequency"
+                  [autoDisplayFirst]="false"
+                  #frequency="ngModel"></p-dropdown>
+      <label for="frequency">Frequency</label>
+    </span>
+    <span class="p-float-label w-100 ml-1">
+      <p-dropdown id="priority"
+                  [required]="true"
+                  [options]="priorities"
+                  [(ngModel)]="model.priority"
+                  optionLabel="value"
+                  optionValue="key"
+                  class="w-100" styleClass="w-100"
+                  name="priority"
+                  [autoDisplayFirst]="false"
+                  #priority="ngModel"></p-dropdown>
+      <label for="frequency">Priority</label>
+    </span>
+  </div>
+  <div class="d-flex flex-end mt-2">
+    <button pButton type="submit" label="Save" [disabled]="!form.form.valid"></button>
+  </div>
+</form>
