--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-listing/expense-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-listing/expense-listing.component.html
@@ -3,12 +3,14 @@
   <p-table [value]="model | needWantFilter : 1 : 'priority'">
     <ng-template pTemplate="header">
       <tr>
+        <th>Name</th>
         <th>Amount</th>
         <th>Frequency</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-expense>
       <tr>
+        <td>{{expense.name}}</td>
         <td>{{expense.amount}}</td>
         <td>{{displayFrequencies(expense.frequency)}}</td>
       </tr>
@@ -20,12 +22,14 @@
   <p-table [value]="model | needWantFilter : 0 : 'priority'">
     <ng-template pTemplate="header">
       <tr>
+        <th>Name</th>
         <th>Amount</th>
         <th>Frequency</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-expense>
       <tr>
+        <td>{{expense.name}}</td>
         <td>{{expense.amount}}</td>
         <td>{{displayFrequencies(expense.frequency)}}</td>
       </tr>
