--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-listing/income-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-listing/income-listing.component.html
@@ -2,12 +2,14 @@
   <p-table [value]="model">
     <ng-template pTemplate="header">
       <tr>
+        <th>Name</th>
         <th>Amount</th>
         <th>Frequency</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-income>
       <tr>
+        <td>{{income.name}}</td>
         <td>{{income.amount}}</td>
         <td>{{displayFrequencies(income.frequency)}}</td>
       </tr>
