#11 fix expense form field for name

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
@@ -5,8 +5,8 @@
         <input pInputText id="name"
                        [required]="true"
                        [(ngModel)]="model.name" name="name"
-                       #amount="ngModel" class="w-100" />
-        <label for="amount">Name</label>
+                       #name="ngModel" class="w-100" />
+        <label for="name">Name</label>
       </span>
       <span class="p-float-label w-100 mt-1">
         <p-inputNumber id="amount"
