#13 #126 Create basic goals page

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -1,1 +1,21 @@
-<p>goal works!</p>
+<div class="d-flex justify-content-between">
+  <div class="flex-column w-100 m-2">
+    <p-card styleClass="m-2" class="mb-2" header="Short Term Savings"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Debt Payoff"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Investments"></p-card>
+  </div>
+  <div class="flex-column w-100 m-2">
+    <p-card styleClass="m-2" class="mb-2" header="Short Term Savings Allocation"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Debt Payoff Allocation"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff Allocation"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Investments Allocation"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Do You Have Enough"></p-card>
+  </div>
+  <div class="flex-column w-100 m-2">
+    <p-card styleClass="m-2" class="mb-2" header="Short Term Savings Result"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Debt Payoff Result"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff Result"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Investments Result"></p-card>
+  </div>
+</div>
