#13 #126 Update Navigation and add sub pages for goals

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -1,3 +1,4 @@
+<app-goal-navigation></app-goal-navigation>
 <div class="d-flex justify-content-between">
   <div class="flex-column w-100 m-2">
     <p-card styleClass="m-2" class="mb-2" header="Short Term Savings"></p-card>
