#13 #119 Move cards to goal pages

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
@@ -1,2 +1,2 @@
 <app-goal-navigation></app-goal-navigation>
-<p>debt works!</p>
+<p-card styleClass="m-2" class="mb-2" header="Debt Payoff"></p-card>
