--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
@@ -1,2 +1,6 @@
 <app-goal-navigation></app-goal-navigation>
-<p>investment works!</p>
+<p-card header="Investments">
+  <div class="mb-1">
+    <app-investment-entry-form (added)="investmentAdded()"></app-investment-entry-form>
+  </div>
+</p-card>
