--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
@@ -1,2 +1,2 @@
 <app-goal-navigation></app-goal-navigation>
-<p>mortgage works!</p>
+<p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff"></p-card>
