--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/saving/saving.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/saving/saving.component.html
@@ -1,2 +1,2 @@
 <app-goal-navigation></app-goal-navigation>
-<p>saving works!</p>
+<p-card styleClass="m-2" class="mb-2" header="Short Term Savings"></p-card>
