add whatifbudget art & naming

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
@@ -1,3 +1,7 @@
 <div>
-  <p-menubar [model]="navs"></p-menubar>
+  <p-menubar [model]="navs">
+    <ng-template pTemplate="start">
+      <img src="./assets/whatifbudget.webp" height="40" class="mr-2">
+    </ng-template>
+  </p-menubar>
 </div>
