--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
   <div class="d-flex">
-    <div class="d-flex flex-column w-100 mr-1">
-      <span class="p-float-label w-100 mb-1">
+    <div class="d-flex w-100 mb-1">
+      <span class="p-float-label w-100 mt-1">
         <input pInputText id="name"
                [required]="true"
                [(ngModel)]="model.name" name="name"
@@ -9,27 +9,28 @@
         <label for="name">Name</label>
       </span>
       <span class="p-float-label w-100 mt-1">
-        <p-inputNumber id="amount"
+        <p-inputNumber id="balance"
                        [required]="true"
-                       [(ngModel)]="model.amount" name="amount"
+                       [(ngModel)]="model.balance" name="balance"
                        #amount="ngModel" class="w-100" styleClass="w-100">
         </p-inputNumber>
-        <label for="amount">Amount</label>
+        <label for="balance">Balance</label>
       </span>
-    </div>
-    <div class="d-flex flex-column w-100 ml-1">
-      <span class="p-float-label w-100 mb-1">
-        <p-dropdown id="frequency"
-                    [required]="true"
-                    [options]="frequencies"
-                    [(ngModel)]="model.frequency"
-                    optionLabel="value"
-                    optionValue="key"
-                    class="w-100" styleClass="w-100"
-                    name="frequency"
-                    [autoDisplayFirst]="false"
-                    #frequency="ngModel"></p-dropdown>
-        <label for="frequency">Frequency</label>
+      <span class="p-float-label w-100 mt-1">
+        <p-inputNumber id="contributionRate"
+                       [required]="true"
+                       [(ngModel)]="model.contributionRate" name="contributionRate"
+                       #amount="ngModel" class="w-100" styleClass="w-100">
+        </p-inputNumber>
+        <label for="contributionRate">Contribution Rate per Month</label>
+      </span>
+      <span class="p-float-label w-100 mt-1">
+        <p-inputNumber id="rateOfReturn"
+                       [required]="true"
+                       [(ngModel)]="model.rateOfReturn" name="rateOfReturn"
+                       #amount="ngModel" class="w-100" styleClass="w-100">
+        </p-inputNumber>
+        <label for="rateOfReturn">Annual Rate of Return</label>
       </span>
     </div>
   </div>
