--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
@@ -11,4 +11,15 @@
     </p-card>
   </div>
 </div>
-
+<div class="d-flex justify-content-between">
+  <div class="d-flex w-100 flex-column m-2">
+    <p-card header="Investment Goals">
+      <div class="mb-1">
+        <app-investment-goal-entry-form (added)="investmentGoalAdded()"></app-investment-goal-entry-form>
+      </div>
+      <div class="mt-1">
+        <app-investment-goal-listing [investmentGoals]="investmentGoals"></app-investment-goal-listing>
+      </div>
+    </p-card>
+  </div>
+</div>
