--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/budget-listing/budget-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/budget-listing/budget-listing.component.html
@@ -1,1 +1,16 @@
-<p>budget-listing works!</p>
+<div class="d-flex flex-column">
+  <div class="d-flex">
+    <p-listbox
+               class="w-100"
+               listStyleClass="w-100"
+               [options]="budgets"
+               optionLabel="name"
+               [filter]="true"
+               [(ngModel)]="selected"
+              filterBy="name">
+    </p-listbox>
+  </div>
+  <div class="d-flex justify-content-end mt-2">
+    <button pButton label="Load" (click)="loadBudget()" [disabled]="!selected"></button>
+  </div>
+</div>
