--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/budget-listing/budget-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/budget-listing/budget-listing.component.html
@@ -7,10 +7,12 @@
                optionLabel="name"
                [filter]="true"
                [(ngModel)]="selected"
-              filterBy="name">
+               filterBy="name"
+               [listStyle]="{'max-height':'40vh'}">
     </p-listbox>
   </div>
-  <div class="d-flex justify-content-end mt-2">
+  <div class="d-flex justify-content-between mt-2">
+    <button pButton class="p-button-secondary" label="Edit" (click)="editBudget()" [disabled]="!selected"></button>
     <button pButton label="Load" (click)="loadBudget()" [disabled]="!selected"></button>
   </div>
 </div>
