--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -1,21 +1,32 @@
-<div class="d-flex justify-content-between">
-  <div class="w-100 d-flex flex-column m-2">
-    <p-card styleClass="h-100" class="mb-2" header="Total Income"></p-card>
-    <p-card styleClass="h-100" class="mt-2" header="Total Expenses"></p-card>
-  </div>
-  <div class="w-100 d-flex m-2">
+<ng-container *ngIf="budget && budget.id">
+  <div class="d-flex justify-content-between">
+    <div class="w-100 d-flex flex-column m-2">
+      <p-card styleClass="h-100" class="mb-2" header="Total Income"></p-card>
+      <p-card styleClass="h-100" class="mt-2" header="Total Expenses"></p-card>
+    </div>
+    <div class="w-100 d-flex m-2">
       <p-card styleClass="mr-2 h-100" header="Net Monthly"></p-card>
       <p-card styleClass="ml-2 h-100" header="Current Net Worth"></p-card>
+    </div>
   </div>
-</div>
-<div class="d-flex">
-  <p-card class="w-100" styleClass="m-2" header="Net Worth Chart"></p-card>
-</div>
-<div class="d-flex justify-content-between">
+  <div class="d-flex">
+    <p-card class="w-100" styleClass="m-2" header="Net Worth Chart"></p-card>
+  </div>
+  <div class="d-flex justify-content-between">
     <p-card styleClass="m-2" class="w-100" header="Short Term Savings Chart"></p-card>
     <p-card styleClass="m-2" class="w-100" header="Debt Payoff Chart"></p-card>
-</div>
-<div class="d-flex justify-content-between">
+  </div>
+  <div class="d-flex justify-content-between">
     <p-card styleClass="m-2" class="w-100" header="Mortgage Payoff Chart"></p-card>
     <p-card styleClass="m-2" class="w-100" header="Investments Chart"></p-card>
-</div>
+  </div>
+</ng-container>
+<ng-container *ngIf="!budget || !budget.id">
+  <div class="panel">
+    <div class="block">
+      <p-card header="Load a Budget">
+        Use the navigation to create a new budget or load an existing. If creating a new budget, please subsequently load it.
+      </p-card>
+    </div>
+  </div>
+</ng-container>
