#6 #175 add login/logout dynamic display based on auth state

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
@@ -9,7 +9,8 @@
   </p-menubar>
   <p-overlayPanel #profile>
     <ng-template pTemplate>
-      <button pButton class="p-button-text p-button-danger" label="Logout" icon="pi pi-fw pi-sign-out" (click)="logout()"></button>
+      <button *ngIf="loggedIn" pButton class="p-button-text p-button-danger" label="Logout" icon="pi pi-fw pi-sign-out" (click)="logout()"></button>
+      <button *ngIf="!loggedIn" pButton class="p-button-text" label="Login" icon="pi pi-fw pi-sign-in" (click)="login()"></button>
     </ng-template>
   </p-overlayPanel>
 </div>
