--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
@@ -9,28 +9,28 @@
         <label for="name">Name</label>
       </span>
       <span class="p-float-label w-100 mt-1">
-        <p-inputNumber id="balance"
+        <p-inputNumber id="currentBalance"
                        [required]="true"
-                       [(ngModel)]="model.balance" name="balance"
+                       [(ngModel)]="model.currentBalance" name="currentBalance"
                        #amount="ngModel" class="w-100" styleClass="w-100">
         </p-inputNumber>
-        <label for="balance">Balance</label>
+        <label for="currentBalance">Current Balance</label>
       </span>
       <span class="p-float-label w-100 mt-1">
-        <p-inputNumber id="contributionRate"
+        <p-inputNumber id="monthlyPersonalContribution"
                        [required]="true"
-                       [(ngModel)]="model.contributionRate" name="contributionRate"
+                       [(ngModel)]="model.monthlyPersonalContribution" name="monthlyPersonalContribution"
                        #amount="ngModel" class="w-100" styleClass="w-100">
         </p-inputNumber>
-        <label for="contributionRate">Contribution Rate per Month</label>
+        <label for="monthlyPersonalContribution">Monthly Personal Contribution</label>
       </span>
       <span class="p-float-label w-100 mt-1">
-        <p-inputNumber id="rateOfReturn"
+        <p-inputNumber id="monthlyEmployerContribution"
                        [required]="true"
-                       [(ngModel)]="model.rateOfReturn" name="rateOfReturn"
+                       [(ngModel)]="model.monthlyEmployerContribution" name="monthlyEmployerContribution"
                        #amount="ngModel" class="w-100" styleClass="w-100">
         </p-inputNumber>
-        <label for="rateOfReturn">Annual Rate of Return</label>
+        <label for="monthlyEmployerContribution">Monthly Employer Contribution</label>
       </span>
     </div>
   </div>
