--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-listing/investment-goal-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-listing/investment-goal-listing.component.html
@@ -5,8 +5,8 @@
       <tr>
         <th></th>
         <th>Name</th>
-        <th>Amount</th>
         <th>Years</th>
+        <th>Annual Rate of Return (%)</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-investment>
@@ -18,8 +18,8 @@
           </div>
         </td>
         <td>{{investment.name}}</td>
-        <td>{{investment.amount}}</td>
         <td>{{investment.years}}</td>
+        <td>{{investment.annualRateofReturn_percent}}</td>
       </tr>
     </ng-template>
   </p-table>
