--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -10,10 +10,7 @@
     </p-card>
   </div>
   <div class="d-flex flex-column w-100 m-2">
-    <p-card class="mb-1">
-      <app-income-detail-section></app-income-detail-section>
-    </p-card>
-    <p-card class="mt-1">
+    <p-card header="Monthly Income">
       <app-income-monthly-detail-section></app-income-monthly-detail-section>
     </p-card>
   </div>
