--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-detail-section/expense-detail-section.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-detail-section/expense-detail-section.component.html
@@ -1,3 +1,3 @@
 <p id="monthly-expenses">
-  expense-detail-section works!
+  <p-chart type="doughnut" [data]="data" height="350px" width="350px"></p-chart>
 </p>
