--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/pages/expense/expense.component.html
@@ -10,7 +10,7 @@
     </p-card>
   </div>
   <div class="d-flex flex-column w-100 m-2">
-    <p-card>
+    <p-card header="Monthly Expense">
       <app-expense-detail-section></app-expense-detail-section>
     </p-card>
   </div>
