--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/styles.scss
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/styles.scss
@@ -358,7 +358,17 @@ body {
   width: 100vh
 }
 
-;
+.w-30 {
+  width: 30%;
+}
+
+.w-40 {
+  width: 40%;
+}
+
+.w-50 {
+  width: 50%;
+}
 
 .w-100 {
   width: 100%;
