--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
@@ -1,14 +1,14 @@
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-  <div class="d-flex">
+  <div class="d-flex flex-column">
     <div class="d-flex w-100 mb-1">
-      <span class="p-float-label w-100 mt-1">
+      <span class="p-float-label w-100 mr-1">
         <input pInputText id="name"
                [required]="true"
                [(ngModel)]="model.name" name="name"
                #name="ngModel" class="w-100" />
         <label for="name">Name</label>
       </span>
-      <span class="p-float-label w-100 mt-1">
+      <span class="p-float-label w-100 ml-1">
         <p-inputNumber id="currentBalance"
                        [required]="true"
                        [(ngModel)]="model.currentBalance" name="currentBalance"
@@ -16,23 +16,25 @@
         </p-inputNumber>
         <label for="currentBalance">Current Balance</label>
       </span>
-      <span class="p-float-label w-100 mt-1">
-        <p-inputNumber id="monthlyPersonalContribution"
-                       [required]="true"
-                       [(ngModel)]="model.monthlyPersonalContribution" name="monthlyPersonalContribution"
-                       #amount="ngModel" class="w-100" styleClass="w-100">
-        </p-inputNumber>
-        <label for="monthlyPersonalContribution">Monthly Personal Contribution</label>
-      </span>
-      <span class="p-float-label w-100 mt-1">
-        <p-inputNumber id="monthlyEmployerContribution"
-                       [required]="true"
-                       [(ngModel)]="model.monthlyEmployerContribution" name="monthlyEmployerContribution"
-                       #amount="ngModel" class="w-100" styleClass="w-100">
-        </p-inputNumber>
-        <label for="monthlyEmployerContribution">Monthly Employer Contribution</label>
-      </span>
-    </div>
+      </div>
+    <div class="d-flex w-100 mt-1">
+        <span class="p-float-label w-100 mr-1">
+          <p-inputNumber id="monthlyPersonalContribution"
+                         [required]="true"
+                         [(ngModel)]="model.monthlyPersonalContribution" name="monthlyPersonalContribution"
+                         #amount="ngModel" class="w-100" styleClass="w-100">
+          </p-inputNumber>
+          <label for="monthlyPersonalContribution">Monthly Personal Contribution</label>
+        </span>
+        <span class="p-float-label w-100 ml-1">
+          <p-inputNumber id="monthlyEmployerContribution"
+                         [required]="true"
+                         [(ngModel)]="model.monthlyEmployerContribution" name="monthlyEmployerContribution"
+                         #amount="ngModel" class="w-100" styleClass="w-100">
+          </p-inputNumber>
+          <label for="monthlyEmployerContribution">Monthly Employer Contribution</label>
+        </span>
+      </div>
   </div>
   <div class="d-flex flex-end mt-2">
     <button pButton type="submit" label="Save" [disabled]="!form.form.valid"></button>
