--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-entry-form/investment-goal-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-entry-form/investment-goal-entry-form.component.html
@@ -1,6 +1,6 @@
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
   <div class="d-flex">
-    <div class="d-flex w-100 mr-1">
+    <div class="d-flex flex-column w-100 mr-1">
       <span class="p-float-label w-100 mt-1">
         <input pInputText id="name"
                [required]="true"
