--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
@@ -10,10 +10,8 @@
       </div>
     </p-card>
   </div>
-</div>
-<div class="d-flex justify-content-between">
-  <div class="d-flex w-100 flex-column m-2">
-    <p-card header="Investment Goals">
+  <div class="d-flex w-40 flex-column m-2">
+    <p-card header="Investment Goal">
       <div class="mb-1">
         <app-investment-goal-entry-form (added)="investmentGoalAdded()"></app-investment-goal-entry-form>
       </div>
