--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
@@ -13,10 +13,7 @@
   <div class="d-flex w-40 flex-column m-2">
     <p-card header="Investment Goal">
       <div class="mb-1">
-        <app-investment-goal-entry-form (added)="investmentGoalAdded()"></app-investment-goal-entry-form>
-      </div>
-      <div class="mt-1">
-        <app-investment-goal-listing [investmentGoals]="investmentGoals"></app-investment-goal-listing>
+        <app-investment-goal-entry-form (updated)="investmentGoalUpdated()" [investmentGoal]="investmentGoal"></app-investment-goal-entry-form>
       </div>
     </p-card>
   </div>
