Reorder % symbol in investment goal entry form

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-entry-form/investment-goal-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-entry-form/investment-goal-entry-form.component.html
@@ -14,7 +14,7 @@
                        [required]="true"
                        [(ngModel)]="model.annualReturnRate_Percent" name="annualReturnRate_Percent"
                        #annualReturnRate_Percent="ngModel" class="w-100" styleClass="w-100"
-                       prefix="%">
+                       suffix="%">
         </p-inputNumber>
         <label for="annualReturnRate_Percent">Annual Rate of Return (%)</label>
       </span>
