--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/navigation/navigation.component.html
@@ -3,11 +3,12 @@
     <img src="./assets/whatifbudget.webp" height="40" class="mr-2">
   </ng-template>
   <ng-template pTemplate="end">
-    <div class="d-flex">
-      <div class="d-flex flex-column justify-content-center" *ngIf="$isLoading | async as loading">
-        <p-progressSpinner strokeWidth="2" [style]="{width: '20px', height: '20px'}"></p-progressSpinner>
-      </div>
-      <button pButton icon="pi pi-user" class="p-button-rounded p-button-text" (click)="profile.toggle($event)"></button>
+    <div class="d-flex align-items-center">
+      <ng-container *ngIf="$isLoading | async as loading">
+        <p-progressSpinner strokeWidth="2" [style]="{width: '25px', height: '25px'}"></p-progressSpinner>
+      </ng-container>
+      <p *ngIf="currentBudget" class="mx-2 my-0">{{currentBudget}} Budget</p>
+      <button *ngIf="loggedIn" pButton icon="pi pi-user" class="p-button-rounded p-button-text" (click)="profile.toggle($event)"></button>
     </div>
   </ng-template>
 </p-menubar>
