--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/pages/income/income.component.html
@@ -2,16 +2,16 @@
   <div class="d-flex w-100 flex-column m-2">
     <p-card header="Incomes">
       <div class="mb-1">
-        <app-income-entry-form (added)="incomeAdded()"></app-income-entry-form>
+        <app-income-entry-form (added)="updateIncomes()"></app-income-entry-form>
       </div>
       <div class="mt-1">
-        <app-income-listing [incomes]="incomes"></app-income-listing>
+        <app-income-listing [incomes]="incomes" (deleted)="updateIncomes()"  (updated)="updateIncomes()"></app-income-listing>
       </div>
     </p-card>
   </div>
   <div class="d-flex flex-column w-40 m-2">
     <p-card header="Monthly Income">
-      <app-income-monthly-detail-section></app-income-monthly-detail-section>
+      <app-income-monthly-detail-section *ngIf="reloadIncome"></app-income-monthly-detail-section>
     </p-card>
   </div>
 </div>
