adjust label display height

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-  <div class="d-flex justify-content-between mb-1">
+  <div class="d-flex justify-content-between my-2">
       <span class="p-float-label w-100 mr-1">
         <input pInputText id="name"
                        [required]="true"
