--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-entry-form/income-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/income/components/income-entry-form/income-entry-form.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-  <div class="d-flex justify-content-between">
+  <div class="d-flex justify-content-between mt-2">
       <span class="p-float-label w-100 mr-1">
         <input pInputText id="name"
                        [required]="true"
