--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/styles.scss
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+//OVERRIDE PRIMENG STYLING
+.p-float-label input:focus ~ label, .p-float-label input.p-filled ~ label, .p-float-label textarea:focus ~ label, .p-float-label textarea.p-filled ~ label, .p-float-label .p-inputwrapper-focus ~ label, .p-float-label .p-inputwrapper-filled ~ label{
+  top: -.2rem !important;
+}
+
 html, body {
   height: 100%;
   background-color: #e8e8e8
