--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
@@ -11,8 +11,11 @@
     </p-card>
   </div>
   <div class="d-flex w-40 flex-column m-2">
+    <p-card header="Balance at Target Year" class="mb-1">
+      <p class="breakdown">${{balanceAtTarget | number: '.2-2'}}</p>
+    </p-card>
     <p-card header="Investment Goal">
-      <div class="mb-1">
+      <div>
         <app-investment-goal-entry-form (updated)="investmentGoalUpdated()" [investmentGoal]="investmentGoal"></app-investment-goal-entry-form>
       </div>
     </p-card>
