--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/investment/investment.component.html
@@ -3,10 +3,10 @@
   <div class="d-flex w-100 flex-column m-2">
     <p-card header="Investments">
       <div class="mb-1">
-        <app-investment-entry-form (added)="investmentAdded()"></app-investment-entry-form>
+        <app-investment-entry-form (added)="updateInvestments()"></app-investment-entry-form>
       </div>
       <div class="mt-1">
-        <app-investment-listing [investments]="investments"></app-investment-listing>
+        <app-investment-listing [investments]="investments" (deleted)="updateInvestments()"  (updated)="updateInvestments()"></app-investment-listing>
       </div>
     </p-card>
   </div>
