--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-listing/investment-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-listing/investment-listing.component.html
@@ -26,3 +26,7 @@
     </ng-template>
   </p-table>
 </div>
+<p-dialog header="Edit Investment" [(visible)]="editModal" [modal]="true" [style]="{width: '50vw'}"
+          [draggable]="false" [resizable]="false">
+  <app-investment-entry-form *ngIf="editInvestment" [investment]="editInvestment" (updated)="editComplete()"></app-investment-entry-form>
+</p-dialog>
