Add units to entry and listing forms

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-entry-form/expense-entry-form.component.html
@@ -11,7 +11,8 @@
         <p-inputNumber id="amount"
                        [required]="true"
                        [(ngModel)]="model.amount" name="amount"
-                       #amount="ngModel" class="w-100" styleClass="w-100">
+                       #amount="ngModel" class="w-100" styleClass="w-100"
+                       prefix="$">
         </p-inputNumber>
         <label for="amount">Amount</label>
       </span>
