--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-listing/investment-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-listing/investment-listing.component.html
@@ -19,9 +19,9 @@
           </div>
         </td>
         <td>{{investment.name}}</td>
-        <td>{{investment.currentBalance }}</td>
-        <td>{{investment.monthlyPersonalContribution}}</td>
-        <td>{{investment.monthlyEmployerContribution}}</td>
+        <td>${{investment.currentBalance }}</td>
+        <td>${{investment.monthlyPersonalContribution}}</td>
+        <td>${{investment.monthlyEmployerContribution}}</td>
       </tr>
     </ng-template>
   </p-table>
