--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
@@ -12,7 +12,8 @@
         <p-inputNumber id="currentBalance"
                        [required]="true"
                        [(ngModel)]="model.currentBalance" name="currentBalance"
-                       #amount="ngModel" class="w-100" styleClass="w-100">
+                       #amount="ngModel" class="w-100" styleClass="w-100"
+                       prefix="$">
         </p-inputNumber>
         <label for="currentBalance">Current Balance</label>
       </span>
@@ -22,7 +23,8 @@
           <p-inputNumber id="monthlyPersonalContribution"
                          [required]="true"
                          [(ngModel)]="model.monthlyPersonalContribution" name="monthlyPersonalContribution"
-                         #amount="ngModel" class="w-100" styleClass="w-100">
+                         #amount="ngModel" class="w-100" styleClass="w-100"
+                         prefix="$">
           </p-inputNumber>
           <label for="monthlyPersonalContribution">Monthly Personal Contribution</label>
         </span>
@@ -30,7 +32,8 @@
           <p-inputNumber id="monthlyEmployerContribution"
                          [required]="true"
                          [(ngModel)]="model.monthlyEmployerContribution" name="monthlyEmployerContribution"
-                         #amount="ngModel" class="w-100" styleClass="w-100">
+                         #amount="ngModel" class="w-100" styleClass="w-100"
+                         prefix="$">
           </p-inputNumber>
           <label for="monthlyEmployerContribution">Monthly Employer Contribution</label>
         </span>
