--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-entry-form/investment-goal-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-goal-entry-form/investment-goal-entry-form.component.html
@@ -22,6 +22,7 @@
         <p-inputNumber id="totalBalance"
                        [(ngModel)]="model.totalBalance" name="totalBalance"
                        #totalBalance="ngModel" class="w-100" styleClass="w-100" [disabled]="true"
+                       [minFractionDigits]="2" [maxFractionDigits]="2"
                        prefix="$">
         </p-inputNumber>
         <label for="totalBalance">Total Balance</label>
