--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-listing/expense-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/expense/components/expense-listing/expense-listing.component.html
@@ -19,7 +19,7 @@
           </div>
         </td>
         <td>{{expense.name}}</td>
-        <td>${{expense.amount}}</td>
+        <td>${{expense.amount | number : '.2-2'}}</td>
         <td>{{displayFrequencies(expense.frequency)}}</td>
       </tr>
     </ng-template>
@@ -45,7 +45,7 @@
           </div>
         </td>
         <td>{{expense.name}}</td>
-        <td>${{expense.amount}}</td>
+        <td>${{expense.amount | number : '.2-2'}}</td>
         <td>{{displayFrequencies(expense.frequency)}}</td>
       </tr>
     </ng-template>
