#25 #200 Implementation of basic mortgage visual for goal summary

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -10,7 +10,9 @@
   <div class="flex-column w-100 m-2">
     <p-card styleClass="m-2" class="mb-2" header="Short Term Savings Result"></p-card>
     <p-card styleClass="m-2" class="mb-2" header="Debt Payoff Result"></p-card>
-    <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff Result"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff Result">
+      <app-mortgage-chart></app-mortgage-chart>
+    </p-card>
     <p-card styleClass="m-2" class="mb-2" header="Investments Result"></p-card>
   </div>
 </div>
