--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
@@ -10,5 +10,11 @@
   <div class="d-flex w-40 flex-column m-2">
     <p-card header="Total Cost of Mortgage" class="mb-1">
     </p-card>
+    <p-card header="Total Cost of Interest" class="mb-1">
+    </p-card>
+  </div>
+  <div class="d-flex w-40 flex-column m-2">
+    <p-card header="Total Cost of Principal" class="mb-1">
+    </p-card>
   </div>
 </div>
