#25 #200 Moved goal chart to shared for use in multiple pages

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -27,7 +27,9 @@
         </p-card>
       </div>
       <div class="d-flex justify-content-between mt-2">
-        <p-card class="w-100 mx-2" header="Mortgage Payoff Chart"></p-card>
+        <p-card class="w-100 mx-2" header="Mortgage Payoff Chart">
+          <app-mortgage-chart></app-mortgage-chart>
+        </p-card>
         <p-card class="w-100 mx-2" header="Debt Payoff Chart"></p-card>
       </div>
     </div>
