#20 #194 Implement chart to display saving goal on summary page and home page

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -8,7 +8,9 @@
     <p-card styleClass="m-2" class="mb-2" header="Do You Have Enough"></p-card>
   </div>
   <div class="flex-column w-100 m-2">
-    <p-card styleClass="m-2" class="mb-2" header="Short Term Savings Result"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Short Term Savings Result">
+      <app-saving-chart></app-saving-chart>
+    </p-card>
     <p-card styleClass="m-2" class="mb-2" header="Debt Payoff Result"></p-card>
     <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff Result">
       <app-mortgage-chart></app-mortgage-chart>
