--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -21,7 +21,9 @@
     <div class="d-flex flex-column">
       <div class="d-flex justify-content-between mt-2">
         <p-card class="w-100 mx-2" header="Net Worth Chart"></p-card>
-        <p-card class="w-100 mx-2" header="Short Term Savings Chart"></p-card>
+        <p-card class="w-100 mx-2" header="Short Term Savings Chart">
+          <app-saving-chart></app-saving-chart>
+        </p-card>
         <p-card class="w-100 mx-2" header="Investments">
           <app-investments-chart></app-investments-chart>
         </p-card>
