#22 #196 Implement basic debt chart in goal summary and home page

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -32,7 +32,9 @@
         <p-card class="w-100 mx-2" header="Mortgage Payoff Chart">
           <app-mortgage-chart></app-mortgage-chart>
         </p-card>
-        <p-card class="w-100 mx-2" header="Debt Payoff Chart"></p-card>
+        <p-card class="w-100 mx-2" header="Debt Payoff Chart">
+          <app-debt-chart></app-debt-chart>
+        </p-card>
       </div>
     </div>
   </div>
