--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -11,7 +11,9 @@
     <p-card styleClass="m-2" class="mb-2" header="Short Term Savings Result">
       <app-saving-chart></app-saving-chart>
     </p-card>
-    <p-card styleClass="m-2" class="mb-2" header="Debt Payoff Result"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Debt Payoff Result">
+      <app-debt-chart></app-debt-chart>
+    </p-card>
     <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff Result">
       <app-mortgage-chart></app-mortgage-chart>
     </p-card>
