#15 #191 Implement debt goal listing form

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
@@ -3,7 +3,10 @@
   <div class="d-flex w-100 flex-column m-2">
     <p-card header="Debts">
       <div class="mb-1">
-        <app-debt-entry-form></app-debt-entry-form>
+        <app-debt-entry-form (added)="updateDebts()"></app-debt-entry-form>
+      </div>
+      <div class="mt-1">
+        <app-debt-listing [debts]="debts" (deleted)="updateDebts()" (updated)="updateDebts()"></app-debt-listing>
       </div>
     </p-card>
   </div>
